# headless-darker

./: README.md  copy_win64.sh  example.env  kill_proton.sh  main.py  pyproject.toml  start_tavern.sh
.github/workflows/: test.yml
UE4SS/: Changelog.md  LICENSE  README.md  UE4SS-settings.ini
UE4SS/CustomGameConfigs/: Readme.md
UE4SS/Docs/: SUMMARY.md  contributing.md  cpp-api.md  custom-game-configs.md  devlogs.md  installation-guide.md  lua-api.md  patternsleuth-games.md  upgrade-guide.md
UE4SS/MapGenBP/: Readme.md
UE4SS/MemberVarLayoutTemplates/: MemberVariableLayout.ini  MemberVariableLayout_4_10_Template.ini  MemberVariableLayout_4_11_Template.ini  MemberVariableLayout_4_12_Template.ini  MemberVariableLayout_4_13_Template.ini  MemberVariableLayout_4_14_Template.ini  MemberVariableLayout_4_15_Template.ini  MemberVariableLayout_4_16_Template.ini  MemberVariableLayout_4_17_Template.ini  MemberVariableLayout_4_18_Template.ini  MemberVariableLayout_4_19_Template.ini  MemberVariableLayout_4_20_Template.ini  MemberVariableLayout_4_21_Template.ini  MemberVariableLayout_4_22_Template.ini  MemberVariableLayout_4_23_Template.ini  MemberVariableLayout_4_24_Template.ini  MemberVariableLayout_4_25_Template.ini  MemberVariableLayout_4_26_Template.ini  MemberVariableLayout_4_27_CasePreserving_Template.ini  MemberVariableLayout_4_27_Template.ini  MemberVariableLayout_5_00_Template.ini  MemberVariableLayout_5_01_Template.ini  MemberVariableLayout_5_02_Template.ini  MemberVariableLayout_5_03_Template.ini  MemberVariableLayout_5_04_Template.ini  (+1 more)
UE4SS/Mods/: mods.json  mods.txt
(+204 files in other folders)
