[project]
name = "headless-darker"
version = "0.1.0"
description = "Automated Dark and Darker wiki tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "discord-py>=2.6.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rss-parser>=2.1.1",
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
